feat: updated SDK and backend to fix upload chunk size
